# WebDev17_18_HandwritingRecognition

./: .gitignore  README.md  WritePad-Handwriting-Recognition-Engine.patch  clean.sh  setup.sh
WritePadWrapper/: CMakeLists.txt  main.cpp
server/: main.py  startServer.sh
